# cmakedummy

./: CMakeLists.txt  README.md
includes/: CalcProcess.hpp
libs/: CMakeLists.txt
libs/mathlibs/: CMakeLists.txt
libs/mathlibs/includes/: ArithmaticOperations.hpp
libs/mathlibs/src/: ArithmaticOperations.cpp
libs/uiolibs/: CMakeLists.txt
libs/uiolibs/includes/: getUInput.hpp
libs/uiolibs/src/: getUInput.cpp
src/: AppMain.cpp  CalcProcess.cpp
test/: CMakeLists.txt
test/src/: CalcProcessTest.cpp  main.cpp
